--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 nbproject/private/config.properties
 nbproject/private/private.properties
+
+nbproject/private/private.xml
+
+dist/.DS_Store
+
+.DS_Store
+
+nbproject/.DS_Store
